--- a/web/themes/custom/govcon/components/atoms/colors/color.scss
+++ b/web/themes/custom/govcon/components/atoms/colors/color.scss
@@ -1,17 +1,33 @@
 $colors: (
-  "primary-lighter": #7AD1E7,
-  "primary-light": #107DB5,
+  "skyblue": #7AD1E7,
+  "dark-blue": #107DB5,
   "primary": #285A83,
   "primary-dark": #213B75,
   "secondary": #F93E5A,
   "light": #F4FAFF,
   "dark": #132B3F,
-  "heading": #213B75,
-  "heading-primary": #202020,
-  "disabled": #868686,
-  "heading-light": #F4FAFF,
-  "link-light": #014AB9,
-  "link-hover": #003381,
-  "link-visited": #4A00DE,
-  "link-dark": #B1DCFF,
+  "primary-black": #202020,
+  "gray": #868686,
+  "cobalt": #014AB9,
+  "indigo": #003381,
+  "violet": #4A00DE,
+  "light-blue": #B1DCFF,
+  "white": #FFFFFF,
+  "black": #000000,
 );
+
+$skyblue: #7AD1E7;
+$dark-blue: #107DB5;
+$primary: #285A83;
+$primary-dark: #213B75;
+$secondary: #F93E5A;
+$light: #F4FAFF;
+$dark: #132B3F;
+$primary-black: #202020;
+$gray: #868686;
+$cobalt: #014AB9;
+$indigo: #003381;
+$violet: #4A00DE;
+$light-blue: #B1DCFF;
+$white: #FFFFFF;
+$black: #000000;
