--- a/web/themes/custom/govcon/components/atoms/icons/icons.twig
+++ b/web/themes/custom/govcon/components/atoms/icons/icons.twig
@@ -1,18 +1,17 @@
-<ul>
-  <li class="border grid">
-    <span class="g-col-2 p-1">
-      Icon
-    </span>
-    <span class="g-col-10 p-1">
-      Name
-    </span>
-  </li>
+<div class="icons-table">
+  <div class="icons__row header">
+    <div class="icons__col">Name</div>
+    <div class="icons__col">Icon Class</div>
+    <div class="icons__col">Icon</div>
+  </div>
+
   {% for icon in icons %}
-    <li class="border grid">
-      <span class="icon icon--{{ icon.name }}"></span>
-      <span class="">
-        {{ icon.name }}
-      </span>
-    </li>
+    <div class="icons__row">
+      <div class="icons__col">{{ icon.name }}</div>
+      <div class="icons__col">icon--{{ icon.name }}</div>
+      <div class="icons__col">
+        <span class="icon icon--{{ icon.name }}"></span>
+      </div>
+    </div>
   {% endfor %}
-</ul>
+</div>
