--- a/web/themes/custom/govcon/components/atoms/icons/icons.scss
+++ b/web/themes/custom/govcon/components/atoms/icons/icons.scss
@@ -6,8 +6,8 @@ $uniqueid: string.unique-id();
   font-family: 'icon--font';
   src: url('assets/fonts/icons/icon--font.eot?v=#{$uniqueid}');
   src: url('assets/fonts/icons/icon--font.eot?v=#{$uniqueid}#iefix') format('eot'),
-    url('assets/fonts/icons/icon--font.woff?v=#{$uniqueid}') format('woff'),
-    url('assets/fonts/icons/icon--font.ttf?v=#{$uniqueid}') format('truetype');
+  url('assets/fonts/icons/icon--font.woff?v=#{$uniqueid}') format('woff'),
+  url('assets/fonts/icons/icon--font.ttf?v=#{$uniqueid}') format('truetype');
   font-display: swap;
 }
 
@@ -30,11 +30,16 @@ $uniqueid: string.unique-id();
 @function icon-char($filename) {
   $char: '';
 
-  @if $filename == facebook {
+  @if $filename ==facebook {
     $char: '\e901';
   }
-  @if $filename == x {
+
+  @if $filename ==x {
     $char: '\e900';
+  }
+
+  @if $filename ==chevron-right {
+    $char: '\e902';
   }
 
   @return $char;
@@ -45,9 +50,11 @@ $uniqueid: string.unique-id();
     @if $extend {
       @extend %icon;
     }
+
     @else {
       @include icon-styles;
     }
+
     content: icon-char($filename);
   }
 }
@@ -55,4 +62,5 @@ $uniqueid: string.unique-id();
 $icons-values: (
   facebook: facebook,
   x: x,
+  chevron-right: chevron-right
 );
