--- a/web/themes/custom/govcon/components/style.scss
+++ b/web/themes/custom/govcon/components/style.scss
@@ -1,5 +1,8 @@
-
+@use 'scss-reset/reset';
+@use '@base/utilities.scss';
 @use "@atoms/colors/colors.utilities.scss";
 @use "@atoms/button/button.scss";
 @use "@atoms/typography/typography.scss";
 @use "@atoms/icons/icons.utility.scss";
+@use "@atoms/link/link.scss";
+@use "@organisms/header/header.scss";
