--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-style.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-style.scss
@@ -5,5 +5,4 @@
 @use "@atoms/typography/typography.scss";
 @use "@atoms/icons/icons.utility.scss";
 @use "@atoms/link/link.scss";
-@use "@organisms/header/header.scss";
-@use "./gutenberg/gutenberg-editor.scss";
+@use "./gutenberg-editor.scss";
