--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-style.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-style.scss
@@ -1,5 +1,5 @@
-@use 'scss-reset/reset';
-@use '@base/utilities.scss';
+@use "scss-reset/reset";
+@use "@base/utilities.scss";
 @use "@atoms/colors/colors.utilities.scss";
 @use "@atoms/button/button.scss";
 @use "@atoms/typography/typography.scss";
