Link State FIxes (#26)

--- a/web/themes/custom/govcon/components/molecules/menu/menu.scss
+++ b/web/themes/custom/govcon/components/molecules/menu/menu.scss
@@ -45,7 +45,7 @@ nav {
         text-decoration: none;
       }
 
-      &.active {
+      &.active a {
         text-decoration: underline;
       }
 
@@ -80,6 +80,7 @@ nav {
       &.active {
         @include mixins.media-breakpoint-up(lg) {
           background: color.$skyblue;
+          text-decoration: none;
         }
       }
 
