--- a/web/themes/custom/govcon/components/organisms/header/header.twig
+++ b/web/themes/custom/govcon/components/organisms/header/header.twig
@@ -1,4 +1,4 @@
-<header class="">
+<header>
   <div class="site-header">
     <div class="container d-flex align-center justify-between">
       <div class="header__branding">
