DGC: Vertical Card Block (#24)
* Created Vertical Card Component

* Added removed patterns

* Tags is Removed

* Removed Menus Data

* DGC-60: Update the vertical card.

* Added Styles & Updated the Patterns

* Patterns Updated

* Patterns Updated

* Updated the Style

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -1,13 +1,11 @@
 @use "@base/utilities.scss" as utility;
 @use "@base/mixins.scss" as mixins;
 
-.wp-block-columns,
-.wp-block-group,
-.wp-block-stack {
+/* Gutenberg Layout Handling */
+.wp-block-columns {
   max-width: utility.$container-width;
   margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-inline: 16px;
 }
 
 .alignwide {
@@ -18,16 +16,35 @@
   max-width: utility.$container-fluid-width;
 }
 
-.wp-block-button__link {
-  background-color: unset;
-  border-radius: 0;
-  box-shadow: none;
-  color: unset;
-  font-size: 1.125em;
-  padding: 0;
-  text-decoration: none;
+main .wp-block-group:nth-child(1) {
+  &:not(.alignwide):not(.alignfull) {
+    max-width: utility.$container-width;
+    margin: 0 auto;
+    padding-inline: 16px;
+  }
 }
 
+/* Buttons */
+.wp-block-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+
+  .wp-block-button__link {
+    display: inline-block;
+    text-align: center;
+    background-color: unset;
+    border-radius: 0;
+    box-shadow: none;
+    color: unset;
+    font-size: 1.125em;
+    padding: 0;
+    text-decoration: none;
+  }
+}
+
+/* Gutenberg Editor Styling */
 .block-editor-block-patterns-list {
   .block-editor-block-preview__container {
     padding-top: 20px !important;
@@ -43,4 +60,37 @@
     clip: unset !important;
     clip-path: unset !important;
   }
+}
+
+/* General Block Styling */
+.editor-styles-wrapper .wp-block {
+  margin-inline: unset;
+}
+
+.wp-block-image {
+  margin: 0;
+
+  @include mixins.media-breakpoint-up(md) {
+    img {
+      max-width: unset;
+    }
+  }
+}
+
+/* Utility Classes */
+.wp-block-group-is-layout-flex {
+  display: flex;
+}
+
+.wp-block-group-is-layout-constrained {
+  display: block;
+}
+
+.is-vertical {
+  display: flex;
+  flex-direction: column;
+}
+
+.is-layout-flex {
+  display: flex !important;
 }
