--- a/web/themes/custom/govcon/components/base/mixins.scss
+++ b/web/themes/custom/govcon/components/base/mixins.scss
@@ -12,7 +12,7 @@ $breakpoints: (
 
 @mixin media-breakpoint-up($size) {
   @if map.has-key($breakpoints, $size) {
-    @media (min-width: map-get($breakpoints, $size)) {
+    @media (min-width: map.get($breakpoints, $size)) {
       @content;
     }
   } @else {
@@ -21,7 +21,7 @@ $breakpoints: (
 }
 
 @mixin media-breakpoint-down($size) {
-  @if map-has-key($breakpoints, $size) {
+  @if map.has-key($breakpoints, $size) {
     $max-width: map.get($breakpoints, $size) - 1px;
     @media (max-width: $max-width) {
       @content;
