DGC-61 Horizontal Card Block (#28)
* Created Vertical Card Component

* Added removed patterns

* Tags is Removed

* Removed Menus Data

* DGC-60: Update the vertical card.

* Added Styles & Updated the Patterns

* Patterns Updated

* Patterns Updated

* Updated the Style

* Added Patterns for Horzontal Card

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -94,3 +94,9 @@ main .wp-block-group:nth-child(1) {
 .is-layout-flex {
   display: flex !important;
 }
+
+@include mixins.media-breakpoint-down(md) {
+  .horizontal-card {
+    flex-direction: column;
+  }
+}
