--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -62,6 +62,10 @@ main .wp-block-group:nth-child(1) {
   }
 }
 
+html :where(.wp-block) {
+  max-width: unset;
+}
+
 /* General Block Styling */
 .editor-styles-wrapper .wp-block {
   margin-inline: unset;
