DGC:40: Created FE Footer. (#12)
* DGC:40: Created FE Footer.

* DGC:40: Updated config name as per module name.

* DGC-40: Updated social menu and responsiveness.

* DGC-40: Updated responsive design. DGC-43: Added footer text.

* DGC-40: Updated as mentioned in footer pr.

* DGC-40: Updated CTA Card styling.

* DGC-40: Worked on PR Review - Footer.

* DGC-40: Updated nesting styling.

* DGC-40: Updated footer design.

* DGC-40: Updated design.

* DGC-40: Updated responsiveness design.

* DGC-40: Default logo logic updated

* DGC-40: Updated missing design.

* DGC-40: Refactor footer styling.

* DGC-40: Make footer logo as not required field.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/atoms/button/button.scss
+++ b/web/themes/custom/govcon/components/atoms/button/button.scss
@@ -14,7 +14,7 @@ $transition: 0.3s;
   outline-offset: -$border-width;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  letter-spacing: 0.08rem;
+  letter-spacing: 0;
   background-color: $color-bg;
   border-radius: $radius;
   position: relative;
