--- a/web/themes/custom/govcon/templates/layout/page.html.twig
+++ b/web/themes/custom/govcon/templates/layout/page.html.twig
@@ -55,11 +55,9 @@
     </section>
   </main>
 
-  {% if page.footer %}
-    <footer id="footer">
-      <div class="footer-content">
-        {{ page.footer }}
-      </div>
-    </footer>
-  {% endif %}
+  <footer id="footer">
+    {% if page.footer %}
+      {% include "@partials/layout/_footer-partials.twig" %}
+    {% endif %}
+  </footer>
 </div>
