Update the footer config (#40)
* DGC:40: Created FE Footer.

* DGC:40: Updated config name as per module name.

* DGC-40: Updated social menu and responsiveness.

* DGC-40: Updated responsive design. DGC-43: Added footer text.

* DGC-40: Updated as mentioned in footer pr.

* DGC-40: Updated CTA Card styling.

* DGC-40: Worked on PR Review - Footer.

* DGC-40: Updated nesting styling.

* DGC-40: Updated footer design.

* DGC-40: Updated design.

* DGC-40: Updated responsiveness design.

* DGC-40: Default logo logic updated

* DGC-40: Updated missing design.

* DGC-40: Refactor footer styling.

* DGC-40: Make footer logo as not required field.

* DGC-000: Updated the footer config check.

* DGC-000: Updated the stroybook themeing.

---------

Co-authored-by: Anwesha <anwesha@digitalpolygon.com>

--- a/web/themes/custom/govcon/components/style-storybook.scss
+++ b/web/themes/custom/govcon/components/style-storybook.scss
@@ -1,6 +1,7 @@
 @use '@atoms/colors/colors.layout.scss';
 @use '@atoms/icons/icons-preview.scss';
 @use '@atoms/link/link.demo.scss';
+@use '@molecules/footer-menu/footer-menu.storybook.scss';
 
 div#storybook-root,
 .sbdocs-preview {
