Creating Patterns in Storybook (#38)
* Creating Patterns in Storybook

* Added Custom Blocks & Sections

* Updated Storybook Preview

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/style-storybook.scss
+++ b/web/themes/custom/govcon/components/style-storybook.scss
@@ -2,6 +2,8 @@
 @use '@atoms/icons/icons-preview.scss';
 @use '@atoms/link/link.demo.scss';
 @use '@molecules/footer-menu/footer-menu.storybook.scss';
+@use './gutenberg/gutenberg-storybook.scss';
+@use '../../../../modules/contrib/gutenberg/js/vendor/gutenberg/block-library/style.css';
 
 div#storybook-root,
 .sbdocs-preview {
