--- a/web/themes/custom/govcon/components/molecules/user-account/user-account.twig
+++ b/web/themes/custom/govcon/components/molecules/user-account/user-account.twig
@@ -1,1 +1,1 @@
-{% include "@molecules/menu/menu.twig" with { menu__items: menu__items, classes: 'user_account_menu', menu_type: 'user_account' } %}
+{% include "@molecules/menu/menu.twig" with { menu__items: menu__items, classes: 'user-account-menu', menu_type: 'user_account' } %}
