--- a/web/themes/custom/govcon/components/atoms/icons/icons.scss
+++ b/web/themes/custom/govcon/components/atoms/icons/icons.scss
@@ -42,6 +42,10 @@ $uniqueid: string.unique-id();
     $char: '\e902';
   }
 
+  @if $filename ==arrow-right {
+    $char: '\e903';
+  }
+
   @return $char;
 }
 
@@ -62,5 +66,6 @@ $uniqueid: string.unique-id();
 $icons-values: (
   facebook: facebook,
   x: x,
-  chevron-right: chevron-right
+  chevron-right: chevron-right,
+  arrow-right: arrow-right
 );
