DGC-81: Support all color to heading and link.

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -97,3 +97,9 @@ html :where(.wp-block) {
 .is-vertical {
   flex-direction: column;
 }
+
+.gutenberg-container {
+  a {
+    color: inherit
+  }
+}
