DGC-81: Commenting the layout flex option for demo.

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -90,13 +90,13 @@ html :where(.wp-block) {
   box-shadow: 4px 4px 4px 2px #00000033;
 }
 
-.is-layout-flex {
-  display: flex;
-}
+// .is-layout-flex {
+//   display: flex;
+// }
 
-.is-vertical {
-  flex-direction: column;
-}
+// .is-vertical {
+//   flex-direction: column;
+// }
 
 .gutenberg-container,
 .editor-styles-wrapper {
