Added Components Documentation

--- a/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
+++ b/web/themes/custom/govcon/components/molecules/announcement-card/announcement-card.twig
@@ -6,7 +6,7 @@
     {{ date }}
   </p>
   <hr class="has-text-color has-primary-color has-primary-background-color has-background my-16" />
-  <p>
+  <p class="announcement-description">
     {{ description }}
   </p>
   {% if link %}
