DGC-53: Created Session Archive Detail Page.

--- a/web/themes/custom/govcon/components/atoms/colors/color.scss
+++ b/web/themes/custom/govcon/components/atoms/colors/color.scss
@@ -14,6 +14,9 @@ $colors: (
   "light-blue": #B1DCFF,
   "white": #FFFFFF,
   "black": #000000,
+  "deep-sky": #0071bc,
+  "navy-blue": #213C75,
+  "light-yellow": #fff1d2,
 );
 
 $skyblue: #7AD1E7;
@@ -31,3 +34,6 @@ $violet: #4A00DE;
 $light-blue: #B1DCFF;
 $white: #FFFFFF;
 $black: #000000;
+$deep-sky: #0071bc;
+$navy-blue: #213C75;
+$light-yellow: #fff1d2;
