--- a/web/themes/custom/govcon/components/molecules/cta-card/cta-card.twig
+++ b/web/themes/custom/govcon/components/molecules/cta-card/cta-card.twig
@@ -2,5 +2,5 @@
   <div class="cta_card-container--description">
     <p>{{ description }}</p>
   </div>
-    {% include '@atoms/button/button.twig' with { label: cta_label, url: cta_url, modifier: "primary"} %}
+    {% include '@atoms/button/button.twig' with { label: cta_label, url: cta_url, modifier: "button primary"} %}
 </div>
