--- a/web/themes/custom/govcon/components/atoms/button/button.twig
+++ b/web/themes/custom/govcon/components/atoms/button/button.twig
@@ -14,5 +14,5 @@
   link_title: label,
   link_target: src_target,
   link_content: label,
-  link_classes: [modifier|default('')]
+  link_classes: ["button", modifier|default('')]
  } %}
