DGC-40: Updated mobile design for footer.

--- a/web/themes/custom/govcon/components/molecules/footer-social-menu/footer-social-menu.scss
+++ b/web/themes/custom/govcon/components/molecules/footer-social-menu/footer-social-menu.scss
@@ -1,9 +1,14 @@
 @use '@atoms/colors/color.scss' as color;
+@use '@base/mixins.scss' as mixins;
 @use "sass:map";
 
 .footer-social-icons {
   display: flex;
   column-gap: 20px;
+
+  @include mixins.media-breakpoint-down(md) {
+    justify-content: center;
+  }
 
   a {
     font-size: 28px;
