--- a/web/themes/custom/govcon/components/molecules/cta-card/cta-card.scss
+++ b/web/themes/custom/govcon/components/molecules/cta-card/cta-card.scss
@@ -1,4 +1,5 @@
 @use '@atoms/colors/color.scss' as color;
+@use '@base/mixins.scss' as mixins;
 @use "sass:map";
 
 .cta_card-container {
@@ -10,6 +11,10 @@
   border-radius: 4px;
   padding: 32px;
 
+  @include mixins.media-breakpoint-down(md) {
+    align-items: flex-start;
+  }
+
   &--description {
     p {
       margin: 0;
@@ -17,3 +22,4 @@
     }
   }
 }
+
