--- a/web/themes/custom/govcon/components/molecules/footer-quick-link-menu/footer-quick-link-menu.scss
+++ b/web/themes/custom/govcon/components/molecules/footer-quick-link-menu/footer-quick-link-menu.scss
@@ -1,7 +1,13 @@
 @use '@atoms/colors/color.scss' as color;
+@use '@base/mixins.scss' as mixins;
 @use "sass:map";
 
 .footer-quick-links {
+  @include mixins.media-breakpoint-down(md) {
+    display: flex;
+    justify-content: center;
+  }
+
   a {
     color: map.get(color.$colors, "light");
   }
